p2p/jackett/templates/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: jackett
spec:
  selector:
    app: jackett
  ports:
  - name: http
    port: 9117
    targetPort: 9117
    protocol: TCP
  type: ClusterIP
