p2p/jackett/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jackett-route
  namespace: p2p
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: cluster-gateway
    namespace: network
    sectionName: https
  hostnames:
  - "jackett.${INFRA_DOMAIN}"
  rules:
  - backendRefs:
    - group: ''
      kind: Service
      name: jackett
      port: 9117
    matches:
    - path:
        type: PathPrefix
        value: /
